RESOLVED FIXED28022
[Chromium] Some minor fixes needed to turn on asserts in Skia
https://bugs.webkit.org/show_bug.cgi?id=28022
Summary [Chromium] Some minor fixes needed to turn on asserts in Skia
Stephen White
Reported 2009-08-05 11:02:26 PDT
Skia doesn't like 0-width rounded rects (it will assert).
Attachments
Check args before calling skia's drawRoundRect to prevent assert (1.39 KB, patch)
2009-08-05 11:08 PDT, Stephen White
dglazkov: commit-queue+
Stephen White
Comment 1 2009-08-05 11:08:21 PDT
Created attachment 34152 [details] Check args before calling skia's drawRoundRect to prevent assert
Dimitri Glazkov (Google)
Comment 2 2009-08-05 16:02:51 PDT
Comment on attachment 34152 [details] Check args before calling skia's drawRoundRect to prevent assert Great!
Adam Barth
Comment 3 2009-08-05 19:39:28 PDT
Comment on attachment 34152 [details] Check args before calling skia's drawRoundRect to prevent assert Clearing review flag on attachment: 34152 Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/rendering/RenderThemeChromiumSkia.cpp Committed r46826 M WebCore/ChangeLog M WebCore/rendering/RenderThemeChromiumSkia.cpp r46826 = 21857865ac6b339cec28d9ff0cceae543db906b3 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46826
Adam Barth
Comment 4 2009-08-05 19:39:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.