2009-08-05  Stephen White  <senorblanco@chromium.org>

Reviewed by Dimitri Glazkov.

        http://bugs.webkit.org/show_bug.cgi?id=28022

        Minor fix for media code on chromium/skia.

        * rendering/RenderThemeChromiumSkia.cpp:
        (WebCore::RenderThemeChromiumSkia::paintMediaSliderTrack):

Canonical link: https://commits.webkit.org/38432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46826 268f45cc-cd09-0410-ab3c-d52691b4dbfc